<resources>
    <string name="app_name">Bank Soal</string>
    <string name="title_home">Halaman Utama</string>
    <string name="title_dashboard">Halaman Utama</string>
    <string name="title_notifications">Notifications</string>

    <string name="login_title">Masuk</string>
    <string name="login">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!--Login Validation-->
    <string name="invalid_username_password">Username dan password salah</string>

    <string name="about">Tentang</string>
    <string name="logout">Keluar</string>
    <string name="feed">My Feed</string>
    <string name="rate_us">Rate Us</string>

    <string name="signUp_title">Daftar</string>
    <string name="signUp">Daftar</string>
    <string name="did_not_have_account">Belom punya akun?</string>
    <string name="register">
        <u>Register</u>
    </string>
    <string name="title_activity_home">Halaman Utama</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="quiz">Kuis</string>
    <string name="back">Kembali</string>
    <string name="home">Halaman Utama</string>
    <string name="course">Kompetensi Dasar</string>
    <string name="start">Mulai</string>
    <string name="choose">Pilih</string>
    <string name="answer">Jawab</string>
    <string name="finish">Selesai</string>
    <string name="app_title">Bank Soal Produksi Pengolahan Hasil Nabati</string>
    <string name="quiz_pict">Gambar Soal</string>
    <string name="about_app">Aplikasi ini merupakan kumpulan dari butir-butir soal sehingga menjadi bank soal untuk mata pelajaran Produksi Pengolahan Hasil Nabati yang dapat digunakan peserta didik SMK dengan program keahlian Agribisnis Pengolahan Hasil Pertanian (APHP).</string>
    <string name="profile_creator">Profil pembuat:\nNama: Nita Septa Dilla\nNIM: 1505406\nJurusan: Pendidikan Teknologi Agroindustri\nKontak: nitasd@student.upi.edu</string>
    <string name="user_guide">Petunjuk Penggunaan</string>
    <string name="next">Lanjut</string>
    <string-array name="user_guide">
        <item>1. Buatlah akun dengan meng-klik register, setelah itu mengisi data dan login.</item>
        <item>2. Setelah login, di bagian kanan halaman utama geser ke arah kanan dan pilih ada beberapa menu</item>
        <item>3. Untuk mulai berlatih soal, silahkan pilih menu Kompetensi Dasar</item>
        <item>4. Klik menu Kompetensi Dasar dan terdapat tujuh pilihan sub-bab</item>
        <item>5. Pilih sub-bab yang akan dicoba untuk berlatih soal.</item>
        <item>6. Setelah memilih sub-bab, silakan menjawab soal dengan pilihan A/B/C/D/E.</item>
        <item>7. Selamat berlatih soal!</item>
    </string-array>
</resources>
