<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
                android:id="@+id/navItemMain"
                android:checked="true"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/home" />
        <item
                android:id="@+id/navItemCourse"
                android:checked="true"
                android:icon="@drawable/ic_star"
                android:title="@string/course" />
        <item
                android:id="@+id/navItemUserGuid"
                android:checked="true"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/user_guide"
        />
        <item
                android:id="@+id/navItemAbout"
                android:checked="true"
                android:icon="@drawable/ic_info_24px"
                android:title="@string/about" />
    </group>
</menu>