<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.example.banksoal.ui.competences.CompetencesViewModel" />
    </data>

    <LinearLayout android:orientation="vertical"
                  android:clickable="true"
                  android:background="@color/light_gray"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <LinearLayout
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/app_bar_height"
                android:gravity="center|start"
                android:orientation="horizontal">

            <ImageButton
                    android:contentDescription="@string/back"
                    android:id="@+id/navBackBtn"
                    style="@style/Button.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:background="@color/transparent"
                    android:onClick="@{() -> viewModel.onNavBackClick()}"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_keyboard_backspace_24px" />

            <TextView
                    style="@style/TextStyle.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/course"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
        </LinearLayout>

        <TextView android:text="@{viewModel.competencesStringify}"
                  android:textColor="@color/black"
                  android:layout_margin="15dp"
                  android:padding="10dp"
                  android:layout_gravity="center"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/tVCompetences" />

        <Button
                android:id="@+id/btnStartClick"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:onClick="@{() -> viewModel.onCourseClick()}"
                android:padding="10dp"
                android:text="@string/start"
                android:textSize="18sp" />
    </LinearLayout>
</layout>