<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
                name="viewModel"
                type="com.example.banksoal.ui.signup.SignupViewModel" />
    </data>

    <LinearLayout
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="0dp"
                android:gravity="center|start"
                android:orientation="horizontal">

            <ImageButton
                    android:id="@+id/navBackBtn"
                    android:contentDescription="@string/back"
                    style="@style/Button.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:background="@color/transparent"
                    android:onClick="@{() -> viewModel.onNavBackClick()}"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_keyboard_backspace_24px" />

            <TextView
                    style="@style/TextStyle.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
        </LinearLayout>

        <RelativeLayout
                android:id="@+id/activityMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background">

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="80dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="80dp"
                    app:cardCornerRadius="7dp"
                    app:cardElevation="22dp">

                <TextView
                        style="@style/TextStyle.Heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_marginTop="60dp"
                        android:text="@string/signUp_title"
                        android:textAllCaps="true"
                        android:textSize="20sp" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:textColorHint="@color/gray"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <android.support.design.widget.TextInputEditText
                                android:id="@+id/etFirstName"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:background="@drawable/input_border_bottom"
                                android:cursorVisible="true"
                                android:gravity="center|start|bottom"
                                android:maxLength="50"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black_effective"
                                android:textSize="18sp" android:inputType="textPersonName"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"
                            android:textColorHint="@color/gray"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <android.support.design.widget.TextInputEditText
                                android:id="@+id/etLastName"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/input_border_bottom"
                                android:cursorVisible="true"
                                android:gravity="center|start|bottom"
                                android:inputType="textPersonName"
                                android:maxLength="50"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black_effective"
                                android:textSize="18sp"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:textColorHint="@color/gray"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <android.support.design.widget.TextInputEditText
                                android:id="@+id/etUsername"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/input_border_bottom"
                                android:cursorVisible="true"
                                android:gravity="center|start|bottom"
                                android:maxLength="50"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black_effective"
                                android:textSize="18sp" android:inputType="textPhonetic"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:textColorHint="@color/gray"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                            app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                                android:id="@+id/etPassword"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/input_border_bottom"
                                android:cursorVisible="true"
                                android:gravity="center|start|bottom"
                                android:inputType="textPassword"
                                android:maxLength="50"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black_effective"
                                android:textSize="18sp" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                            android:id="@+id/btnSignup"
                            style="@style/Button.Primary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="15dp"
                            android:onClick="@{() -> viewModel.onSignUpClick()}"
                            android:padding="10dp"
                            android:text="@string/signUp"
                            android:textSize="18sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <android.support.v4.widget.ContentLoadingProgressBar
                android:id="@+id/address_looking_up"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />

    </LinearLayout>
</layout>